--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+img {
+  height: 500px;
+}
+
+.slider {
+  background-color: #18181a;
+  transform: translateY(100%);
+  transition: transform .7s linear;
+}
+
+.hero{
+
+transform: translateY(100%);
+transition: transform .8s linear;
+
+}
+
+.nav{
+
+transition: opacity 1s linear;
+
+}
